--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
   <div id="app" class="container-fluid">
     <div class="alert alert-success" role="alert" id="user-name"><i class="fa fa-spinner fa-spin"></i></div>
   </div>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="main.dart.js"></script>
   <script src="//api.bitrix24.com/api/v1/"></script>
 
   <script>
@@ -42,7 +44,7 @@
       BX24.init(function(){
         app.displayCurrentUser('#user-name');
       });
-      });
+    });
     
   </script>
 
